[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "df"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Wenyi Tang", email = "wenyitang@outlook.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["scipy", "numpy"]

[project.urls]
Home = "https://github.com/LoSealL/detection-filter"

[project.optional-dependencies]
test = ["black", "flake8", "isort", "pytest"]

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = ['__init__.py:F401']
max-line-length = 88
max-complexity = 20
count = true

[tool.isort]
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "no-member",
    "no-name-in-module",
    "fixme",
    "R",
    "I",
]
